--- a/WebBrowser/WebBrowser.csproj
+++ b/WebBrowser/WebBrowser.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Favourite.cs" />
+    <Compile Include="FavouritesMgr.cs" />
     <Compile Include="WebManager.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
