--- a/WebBrowser/WebBrowser.csproj
+++ b/WebBrowser/WebBrowser.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="History.cs" />
     <Compile Include="HomePage.cs" />
+    <Compile Include="Page.cs" />
     <Compile Include="PersistenceMgr.cs" />
     <Compile Include="Favourite.cs" />
     <Compile Include="Favourites.cs" />
