--- a/WebBrowser/WebBrowser.csproj
+++ b/WebBrowser/WebBrowser.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrowserHistory.cs" />
     <Compile Include="History.cs" />
     <Compile Include="HomePage.cs" />
     <Compile Include="Page.cs" />
