--- a/WebBrowser/WebBrowser.csproj
+++ b/WebBrowser/WebBrowser.csproj
@@ -85,6 +85,7 @@
     <EmbeddedResource Include="WebTab.resx">
       <DependentUpon>WebTab.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
